# webtx_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_key_manager.py  test_research_jobs.py  test_research_tools.py  test_server.py
webtx_mcp/: __init__.py  __main__.py  db.py  gemini_client.py  key_manager.py  onboard.py  research_jobs.py  server.py
